# sokrates-mcp

./: .gitignore  README.md  README_PUBLISHING.md  config.yml.example  main.py  mcp_config.py  pyproject.toml  workflow.py
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
src/sokrates_mcp/: main.py  mcp_config.py  workflow.py
tests/: MANUAL_FULL_TEST_RUN.md
tests/assets/json/: example_1.json
tests/assets/text_files/: text_file_1.md  text_file_2.md
