[project]
name = "llm-tools-mcp"
version = "0.1.5"
description = "A templated MCP server for demonstration and quick start."
dependencies = [
    "fastmcp",
    "llm_tools @ file:///Users/dude/dev/os_projects/llm_tools",
    "pydantic",
    "PyYAML"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
