[project]
name = "sokrates-mcp"
version = "0.4.3"
description = "The sokrates MCP server provides the sokrates workflows as tools. It allows prompt refinement, external execution, idea generation, file and directory operations, code review generation, dice rolling and supports multiple LLM provider configurations for distributing workloads."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Julian Weber", email = "julianweberdev@gmail.com" }]
keywords = ["mcp", "llm", "tools", "system-monitoring", "ai", "prompt refinement", "idea generation"]
dependencies = [
    "fastmcp",
    "sokrates",
#    "sokrates @ file:///home/verfeinerer/dev/os_projects/sokrates",
    "pydantic",
    "PyYAML"
]

[project.urls]
Homepage = "https://github.com/Kubementat/sokrates-mcp"
Repository = "https://github.com/Kubementat/sokrates-mcp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sokrates*"]

[project.scripts]
sokrates-mcp = "sokrates_mcp.main:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

# Optional: Define TestPyPI for testing publishes
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
